--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
 
   <div class="box">
-    <img src="./images/image-qr-code.png" alt="image-qr-code">
+    <img src="./qr-code-component-main/images/image-qr-code.png" alt="image-qr-code">
     <h2>Improve your front-end <br>skills by building projects</h2>
 
     <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills to <br> the next level</p>
